# ifj19

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  grammar.txt  parser.h  rozdeleni  rozsireni
.github/workflows/: main.yml
examples/: add_with_return  advanced_while_with_if  if_elif_else_condition  print_solutions.sh  semantic_control  simple_add  simple_while
src/: CMakeLists.txt  Makefile  array_nodes.c  array_nodes.h  ast_structures.h  builtin_functions.c  builtin_functions.h  deque.c  deque.h  error.c  error.h  expression.c  expression.h  expression_parser.c  expression_parser.h  generate.c  generate.h  generator.c  generator.h  generator_functions.c  generator_functions.h  hash_map.c  hash_map.h  iterator.c  iterator.h  main.c  parser.c  parser.h  parser_ast.c  parser_ast.h  parser_result.c  parser_result.h  ptr_string.c  ptr_string.h  queue.c  queue.h  scaner.c  scaner.h  scope.c  scope.h  (+7 more)
testing_parser/: parser_def_func.c
tests/: CMakeLists.txt  deque.cpp  lexer_test.cpp  string_test.cpp
